# ducta

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: hello.rs
src/: handler.rs  http.rs  io.rs  lib.rs  main.rs  net.rs  server.rs
src/http/: parser.rs  request.rs  response.rs
src/io/: buffer_pool.rs
src/net/: connection.rs
