[package]
name = "ducta"
version = "0.1.0"
edition = "2021"
description = "Experimental non-blocking HTTP server focused on explicit I/O state machines"
license = "MIT OR Apache-2.0"
authors = ["Eduardo Marinho <eduardomarinho@pm.me>"]
repository = "https://github.com/enfmarinho/ducta"
readme = "README.md"

[dependencies]
